gitops/apps/base/sovereign-cloud-wisdom/app/httproute-redirect.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: root-redirect
  namespace: envoy-gateway-system
spec:
  parentRefs:
    - name: eg
      sectionName: https-root
  hostnames:
    - sovereigncloudwisdom.eu
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      filters:
        - type: RequestRedirect
          requestRedirect:
            hostname: wisdom.scw.sovereigncloudwisdom.eu
            statusCode: 301
